--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,32 +3,75 @@
 }
 
 body {
-  margin-left:
+  margin-left: 170px;
+  margin-right: 170px;
 
 }
 
-.header {
-  border-bottom: lightgrey 6px solid;
-  width: 100%;
+.header{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  height: 45px;
+  margin-bottom: 20px;
+}
+.logo-image{
+  width: 42px;
+  height: inherit;
+
+}
+.logo-text{
+  height: inherit;
+  padding-left: 5px;
+}
+.logo-text h2{
+  margin: 0px;
+  font-family: 'Yellowtail', cursive;
+  font-weight: 400;
+}
+.logo-text p{
+  margin: 0px;
+  font-size: 12px;
+  color: #bfbfbf;
+}
+.logo-list{
+  list-style-type: none;
+}
+.social-media-list{
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  margin:  0px;
+  padding-right: 5px;
+  padding-left: 234px;
+}
+.social-media-list li{
+  margin: 1px;
+}
+.rss-mail-list{
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  margin: 0px;
+  padding: 0px;
+
+}
+.rss-mail-list li{
+  margin: 1px;
 }
 
 .content {
-  border-bottom: lightgrey 6px solid;
+  border-bottom: lightgrey 10px solid;
 }
 
-.logo-text h3 {
-  font-family: 'Yellowtail', cursive;
-}
+.pizza-img {
 
-.social-media-list {
-  display: inline;
-
-}
-
-.rss-mail-list{
-  display: inline;
 }
 
 .recipe {
   background-image: url("../img/list-bg.png");
+}
+
+.strike {
+  text-decoration: line-through;
 }
