Project time up. Did some content work.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,8 +3,10 @@
 }
 
 body {
-  margin-left: 170px;
-  margin-right: 170px;
+  margin-left: 26%;
+  margin-right: ;
+  width: 700px;
+  justify-content:center;
 
 }
 
@@ -14,6 +16,8 @@ body {
   align-items: flex-start;
   height: 45px;
   margin-bottom: 20px;
+  padding-bottom: 13px;
+  border-bottom: 10px #bfbfbf solid;
 }
 .logo-image{
   width: 42px;
@@ -64,7 +68,58 @@ body {
   border-bottom: lightgrey 10px solid;
 }
 
+.content-head {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+
+}
+
+.content-head-text {
+  display: flex;
+  flex-direction: column;
+  width: 350px;
+
+}
+
+.content-head-text h1 {
+  margin-bottom: 0px;
+  font-family: sans-serif;
+  font-weight: 600;
+}
+
+.content-head-text p {
+  margin-bottom: 0px;
+  font-size: 15px;
+  color: #bfbfbf
+}
+
+.content-head-print {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  justify-content: flex-end;
+  width: 350px;
+  padding: 0px;
+  font-size: 15px;
+  color: #bfbfbf;
+}
+
 .pizza-img {
+  width: 700px;
+  height: auto;
+
+}
+.content p {
+  text-indent: 30px;
+  margin-top: 30px;
+}
+
+.content p:last-child{
+  margin-bottom: 30px;
+}
+
+.content-p {
 
 }
 
